--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "3.0.1",
     "vue-toasted": "1.1.24",
     "vue2-editor": "2.6.6",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.0.1",
